--- a/index.html
+++ b/index.html
@@ -8,30 +8,39 @@
 </head>
 
 <body>
-    <div class="header">
-        <h1>Ashley Tate</h1>
-        <div class="navbar">
-            <ul>
-                <li>
-                    <a href="#about-me">About Me</a>
-                </li>
-                <li>
-                    <a href="#work">Work</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-                <li>
-                    <a href="resume">Resume</a>
-                </li>
-            </ul>
+     <div class="header">
+         <h1>Ashley Tate</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about-me">About Me</a></li>
+                    <li><a href="#work">Work</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
+    
+    <div class="about-me">
+        <h2><a id="about-me"></a>About Me</h2>
+            <img src="./assets/images/headshot.jpeg" alt="headshot"/>
+            <p> As an editor, I am passionate about ensuring that the brightest insights can make the fullest impact. As an academic, educator, and researcher, I am committed to making complicated concepts accessible and meaningful to audiences with all levels of experience. As a program coordinator, I thrive on drawing together people and resources to achieve successful results. </p>
     </div>
-    <div class="content">
-        <div class="about-me" id="about-me">
-            <img src="https://live.staticflickr.com/65535/51232595556_66df13b72b_k.jpg" class="float-left" alt="A white woman in her early thirties smiles at the camera. She has light brown hair, brown eyes, and is wearing a burgundy jacket. Behind her is a light brown wall with vertical stripes." />
-            <h2><a id="search-engine-optimization"></a>About Me</a></h2>
-            <p class="float-right">
-                As an editor, I am passionate about ensuring that the brightest insights can make the fullest impact. As an academic, educator, and researcher, I am committed to making complicated concepts accessible and meaningful to audiences with all levels of experiences. As a program coordinator, I thrive on drawing together people and resources to achieve successful results. 
-            </p>
-        </div>
+    
+    <div class="work">
+        <h2><a id="work"></a>Work</h2>
+            <a href="https://wordpress.its.virginia.edu/Gender__Sex_in_the_Bible/">
+                <img class="gender-and-sexuality" alt="Adam and Eve" src="./assets/images/cropped-cropped-adam_and_eve.jpg"></a>
+            <a href="https://wordpress.its.virginia.edu/_17264/">
+                <img class="work-image" src="./assets/images/cropped-David-and-Goliath.jpg" alt="David and Goliath"></a>
+            <a href="https://wordpress.its.virginia.edu/Bible_in_Fiction__Film/">
+                <img class="work-image" src="./assets/images/cropped-jesus-of-montreal-film.jpg" alt="Jesus of Montreal"></a>
+    </div>
+
+
+    <div class="footer">
+        <h2 a id="contact"></a>Contact</h2>
+            <ul class="content">
+                <li class="content"><a href="mailto: ashley.m.tate@gmail.com">E-mail</a></li>
+                <li class="content"><a href="https://www.linkedin.com/in/ashley-marie-tate/">LinkedIn</a></li>
+                <li class="content"><a href="https://github.com/endlessashley">GitHub</a></li>
+            </ul>
+    </div>
