--- a/index.html
+++ b/index.html
@@ -108,6 +108,6 @@
         </div>
     </div>
 
-    <script src="assets/js/script.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
  
