tweak navbar breakpoints

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
     <nav class="container-fluid">
         <div class="row justify-content-center nav">
-            <div class="col-sm-4 col-xs-12 text-center">
+            <div class="col-md-4 col-xs-12 text-center">
                 <button id="about-button" type="button" class="btn">About</button>
             </div>
-            <div class="col-sm-4 col-xs-12 text-center">
+            <div class="col-md-4 col-xs-12 text-center">
                 <button id="portfolio-button" type="button" class="btn">Portfolio</button>
             </div>
-            <div class="col-sm-4 col-xs-12 text-center">
+            <div class="col-md-4 col-xs-12 text-center">
                 <a href="assets/images/developerresume921.pdf">Resume</a>
             </div>
         </div>
@@ -96,13 +96,13 @@
     <div class="container-fluid">
         <div class="row justify-content-center nav">
 
-            <div class="col-sm-4 col-xs-12 text-center">
+            <div class="col-md-4 col-xs-12 text-center">
                 <a href="https://www.linkedin.com/in/ashley-marie-tate/">LinkedIn</a>
             </div>
-            <div class="col-sm-4 col-xs-12 text-center">
+            <div class="col-md-4 col-xs-12 text-center">
                 <a href="mailto: ashley.m.tate@gmail.com">E-mail</a>
             </div>
-            <div class="col-sm-4 col-xs-12 text-center">
+            <div class="col-md-4 col-xs-12 text-center">
                 <a href="https://github.com/endlessashley">GitHub</a>
             </div>
         </div>
