larger font-sizes for mobile, reformatting skills

--- a/index.html
+++ b/index.html
@@ -36,21 +36,12 @@
             <div class="col-xs-12 col-md-4" id="headshot-col"><img src="./assets/images/portfolio-picture-921.jpeg" alt="headshot" class="img-responsive" id="headshot"/></div>
             <div class="col-xs-12 col-md-8">
                 <p>Welcome! I'm a full-stack developer with a flair for the front-end 
-                    and a penchant for the back-end, with experience in:
-                    <ul>
-                        <li>Javascript</li>
-                        <li>jQuery</li>
-                        <li>Node.js</li>
-                        <li>Express.js</li>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Bootstrap</li>
-                        <li>Pure.css</li>
-                        <li>Handlebars</li>
-                        <li>MySQL</li>
-                        <li>Sequelize</li>
-                        <li>MongoDB</li>
-                    </ul> 
+                    and a penchant for the back-end, with experience in:</p>
+
+                    <div class="skills">
+                   <p> Javascript &#9830  jQuery  &#9830 Node.js &#9830 Express.js</br>
+                   HTML &#9830 CSS &#9830 Bootstrap &#9830 Pure.css &#9830 Handlebars</br>
+                   MySQL &#9830 Sequelize &#9830 MongoDB</p></div>
                     <p>I also hold a PhD in the humanities from the University of Virginia. 
                         In former lives, I've been an adjunct professor, program coordinator, grant writer, and managing editor.
                         I'm thrilled to now bring all of these skills to bear in a career as a full-stack developer!
